--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "brave-search-web-ext",
+  "name": "yandex-search-web-ext",
   "version": "1.0.1",
-  "description": "Brave search engine for web-ext",
+  "description": "Yandex search engine for web-ext",
   "scripts": {
     "lint": "web-ext lint",
     "build": "web-ext build --overwrite-dest -a ./dist -s ./src",
     "run": "web-ext run"
   },
   "keywords": [
-    "firefox"
+    "firefox",
+    "extension",
+    "yandex",
+    "search"
   ],
-  "author": "uvera",
+  "author": "librity",
   "license": "MIT",
   "devDependencies": {
     "web-ext": "^6.2.0"
